# implant.js

./: README.md
client/: .gitignore  CMakeLists.txt  README.md
client/inc/: consts.h  jsdbg.h  jseng.h  jsnatives.h  log.h  module.h  net.h  state.h  utils.h  winhdr.h
client/src/: client.cc  jsdbg.cc  jseng.cc  jsnatives.cc  log.cc  net.cc  state.cc  utils.cc
client/tests/: jseng_test.cc  utils_test.cc
client/tests/scripts/: lib.js  test_ctx.js  test_error.js  test_ffi.js  test_fs.js  test_mem.js
detections/: README.md  client_startup.pml  implantjs_traffic.pcap  rules.yar  suricata_7.0.3.rules
modules/: README.md  recon.js  rtport_lpe.js  types.d.ts  whoami.js
modules/lib/: asserts.js  utils.js
modules/tests/: e2e.js  lib.js
server/: README.md  server.py
server/tests/: test_modload.py
tests/: e2e.py
